<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7CCC8"
    tools:context=".GameStart">


    <TextView
        android:id="@+id/gameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintBottom_toTopOf="@id/chess_board_view" />

    <com.example.chess.ChessBoardView
        android:id="@+id/chess_board_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        custom:filledSpaceColor="#A1887F"
        custom:whiteSpaceColor="#EFEBE9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="158dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chess_board_view">

        <Button
            android:id="@+id/aiButton"
            android:layout_width="145dp"
            android:layout_height="35dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button"
            android:onClick="aiButtonClicked"
            android:text="@string/ai"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/undoButton"
            android:layout_width="145dp"
            android:layout_height="35dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button"
            android:onClick="undoButtonClicked"
            android:text="@string/undo"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/drawButton"
            android:layout_width="145dp"
            android:layout_height="35dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="84dp"
            android:background="@drawable/button"
            android:onClick="drawButtonClicked"
            android:text="@string/draw"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/resignButton"
            android:layout_width="145dp"
            android:layout_height="35dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="84dp"
            android:background="@drawable/button"
            android:onClick="resignButtonClicked"
            android:text="@string/resign"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="158dp"
        app:layout_constraintBottom_toTopOf="@+id/chess_board_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/homeButton"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button"
            android:onClick="homeButtonClicked"
            android:text="@string/home"
            custom:layout_constraintBottom_toBottomOf="@+id/playAgainButton"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintStart_toEndOf="@+id/playAgainButton" />

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button"
            android:onClick="playAgainButtonClicked"
            android:text="@string/play_again"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintHorizontal_bias="0.498"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/recordGameButton"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/record_game"
            custom:layout_constraintBottom_toBottomOf="@+id/playAgainButton"
            custom:layout_constraintEnd_toStartOf="@+id/playAgainButton"
            custom:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>