<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7CCC8"
    tools:context=".GamePlayback">

    <TextView
        android:id="@+id/gameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        custom:layout_constraintBottom_toTopOf="@id/chess_board_view"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent" />

    <com.example.chess.ChessBoardView
        android:id="@+id/chess_board_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        custom:filledSpaceColor="#A1887F"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent"
        custom:whiteSpaceColor="#EFEBE9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="158dp"
        custom:layout_constraintBottom_toBottomOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/chess_board_view">

        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:onClick="homeButtonClicked"
            android:text="@string/home"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="158dp"
        custom:layout_constraintBottom_toTopOf="@+id/chess_board_view"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/forwardGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:onClick="forwardClicked"
            android:text="@string/forward"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintHorizontal_bias="0.746"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/backwardGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:onClick="backClicked"
            android:text="@string/backward"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toStartOf="@+id/forwardGameButton"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>